# yolotrim

./: .travis.yml  Cargo.toml  README.md  RELEASING.md  develop.sh  lint.sh  pylintrc  pyproject.toml  test.sh
python/yolotrim/: __init__.py  cli.py
python/yolotrim/test/: test.py
src/: lib.rs
