[package]
name = "yolotrim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yolotrim"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
fastq = "0.6.0"
num_cpus = "1.15.0"
regex = "1"
lazy_static = "1.4.0"
