[package]
name = "yolotrim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yolotrim"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
# fastq = "0.6.0"
seq_io = "0.3.2"
num_cpus = "1.15.0"
regex = "1"
# lazy_static = "1.4.0"
# flate2 = {version = "1.0.25", features = ["zlib-ng"], default-features = false}
indicatif = "0.17.3"
rayon = "1.7.0"
# bio = "1.1.0"
# crossbeam = "0.8.2"
gzp = "0.11.3"
rustc-hash = "1.1.0"
# pipelines = "0.4.0"